--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECTION = mongodb+srv://{USERNAME}:{PASSWORD}@cluster0-korai.mongodb.net/{DATABASENAME}?retryWrites=true&w=majority
+DB_CONNECTION = mongodb+srv://nodeTest:nodeTest@cluster0-korai.mongodb.net/learningNode?retryWrites=true&w=majority
